test/tests/fail/arrayassign.alan
main () : proc
	c : byte[20];
{
	c = "This is a string\0";
}
